[gd_scene load_steps=2 format=3 uid="uid://futsal_menu_2d"]

[ext_resource type="Script" path="res://scripts/menu_2d.gd" id="1_menu"]

[node name="Menu2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.07, 0.1, 0.18, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0

[node name="Layout" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "FUTSAL 3D - Menú Principal"
theme_override_font_sizes/font_size = 42

[node name="Subtitle" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "Creador de plantilla (2D) antes de entrar al partido"
theme_override_font_sizes/font_size = 20

[node name="TemplatePanel" type="PanelContainer" parent="Margin/Layout"]
layout_mode = 2

[node name="TemplateForm" type="GridContainer" parent="Margin/Layout/TemplatePanel"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 10

[node name="TeamNameLabel" type="Label" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
text = "Nombre equipo"

[node name="TeamNameInput" type="LineEdit" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
placeholder_text = "Mi Equipo"
text = "Mi Equipo"

[node name="PrimaryLabel" type="Label" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
text = "Color principal"

[node name="PrimaryColorInput" type="LineEdit" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
placeholder_text = "#3388ff"
text = "#3388ff"

[node name="SecondaryLabel" type="Label" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
text = "Color secundario"

[node name="SecondaryColorInput" type="LineEdit" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
placeholder_text = "#ffffff"
text = "#ffffff"

[node name="FormationLabel" type="Label" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
text = "Formación"

[node name="FormationInput" type="LineEdit" parent="Margin/Layout/TemplatePanel/TemplateForm"]
layout_mode = 2
placeholder_text = "2-2"
text = "2-2"

[node name="Buttons" type="HBoxContainer" parent="Margin/Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateTemplateButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Guardar plantilla"

[node name="PlayButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Jugar partido"

[node name="QuitButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Salir"

[node name="StatusLabel" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "Estado"
theme_override_font_sizes/font_size = 18
